<resources>
    <string name="app_name">Application</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="nhap_ten">Nhap ten:</string>
    <string name="password">Password</string>
    <string name="dang_nhap">Dang Nhap</string>
    <string name="dang_ky">Dang Ky</string>
    <string name="nhap">Nhap:</string>
    <string name="ket_qua">Ket Qua</string>
    <string name="search">Search</string>
    <string name="image">Image</string>
    <string name="acction_view">Acction View</string>
    <string name="action_sentto">Action SentTo</string>
    <string name="action_call">Action Call</string>
    <string name="text">Text</string>
    <string name="edit_text">Edit Text</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name:</string>
    <string name="fist_name">Fist Name:</string>
    <string name="user_name">User Name</string>
    <string name="confirm">Confirm</string>
    <string name="nhap_dia_chi_ip">Nhap dia chi IP</string>
    <string name="private_ip">Private IP</string>
    <string name="public_ip">Public IP</string>
    <string name="ip_kh_ng_h_p_l">IP không hợp lệ!</string>
</resources>