<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".table_layout.TableLayoutActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_logo"
        style="@style/logo" />

    <!-- Hàng 1 -->
    <TableRow android:background="#FFFFFF">
        <TextView
            android:id="@+id/tvA"
            android:background="#000000"
            android:text="@string/a"
            android:layout_span="1"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvB"
            android:layout_span="3"
            android:background="#FF0000"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/b"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </TableRow>

    <!-- Hàng 2 -->
    <TableRow android:background="#FFFFFF" android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tvC"
            android:background="#000000"
            android:text="@string/c"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvD"
            android:background="#2962FF"
            android:text="@string/d"
            android:layout_span="2"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvE"
            android:background="#000000"
            android:text="@string/e"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:gravity="center"/>
    </TableRow>

</TableLayout>
