<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:stretchColumns="2">

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_logo"
        style="@style/logo"
        tools:ignore="ContentDescription" />

    <!-- Hàng tên -->
    <TableRow
        android:layout_width="match_parent"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edt_username"
            style="@style/editText"
            android:layout_weight="1"
            android:hint="@string/nhap_ten"
            tools:ignore="Autofill,TextFields" />

    </TableRow>

    <!-- Hàng mật khẩu -->
    <TableRow
        android:layout_width="match_parent"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edt_password"
            style="@style/editText"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill,TextFields" />
    </TableRow>

    <!-- Hàng nút -->
    <TableRow
        android:layout_width="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/btn_login"
            style="@style/btn"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/dang_nhap"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/btn_register"
            style="@style/btn"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dang_ky"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>

</TableLayout>
