<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_logo"
        style="@style/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="261dp"
        android:layout_marginEnd="261dp"
        tools:ignore="ContentDescription" />

    <!-- Hàng họ -->
    <LinearLayout
        android:id="@+id/ll_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_first_name_label"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fist_name" />

        <EditText
            android:id="@+id/edt_first_name"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>

    <!-- Hàng tên -->
    <LinearLayout
        android:id="@+id/ll_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_first_name"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_last_name_label"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/edt_last_name"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

    </LinearLayout>

    <!-- Nút submit -->
    <TextView
        android:id="@+id/btn_submit"
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_last_name"
        android:layout_marginTop="10dp"
        android:text="@string/submit" />

</RelativeLayout>
